--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "postinstall": "quasar prepare"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "pinia": "^3.0.1",
+    "@codemirror/lang-rust": "^6.0.2",
     "@quasar/extras": "^1.16.4",
+    "axios": "^1.2.1",
+    "codemirror": "^6.0.2",
+    "dompurify": "^3.3.1",
+    "markdown-it": "^14.1.0",
+    "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "^3.5.22",
     "vue-router": "^4.0.0"
