--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "quasar-project",
+  "name": "coding-space",
   "version": "0.0.1",
-  "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "description": "CodingSpace",
+  "productName": "CodingSpace",
   "author": "Matthew Branning <48932625+juandap1@users.noreply.github.com>",
   "type": "module",
   "private": true,
